src/index.scss
@import url("https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap");

:root {
  --text: #6b6375;
  --text-h: #0d0a06;
  --text-s: #fd7628;
  --bg: #fff;
  --secondary-bg: #fce536c3;
  --border: #e5e4e7;
  --code-bg: #f4f3ec;
  --accent: #ffa73b;
  --accent-bg: rgba(247, 189, 27, 0.25);
  --accent-border: rgba(255, 177, 59, 0.5);
  --social-bg: rgba(244, 243, 236, 0.5);
  --shadow:
    rgba(0, 0, 0, 0.1) 0 10px 15px -3px, rgba(0, 0, 0, 0.05) 0 4px 6px -2px;

  --sans: system-ui, "Segoe UI", Roboto, sans-serif;
  --heading: system-ui, "Segoe UI", Roboto, sans-serif;
  --mono: ui-monospace, Consolas, monospace;

  font: 18px/145% var(--sans);
  letter-spacing: 0.18px;
  color-scheme: light;
  color: var(--text-h);
  background: var(--bg);
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  @media (max-width: 1024px) {
    font-size: 16px;
  }
}

.dark-theme {
  --text: #a1a1aa;
  --text-h: #e2e2e5;
  --bg: #1a1a1d;
  --border: #27272a;
  --code-bg: #222226;
  --accent: #ffa73b;
  --accent-bg: rgba(247, 189, 27, 0.2);
  --accent-border: rgba(255, 177, 59, 0.5);
  --social-bg: rgba(30, 30, 30, 0.5);
  --shadow:
    rgba(0, 0, 0, 0.6) 0 10px 15px -3px, rgba(0, 0, 0, 0.4) 0 4px 6px -2px;

  #social {
    .button-icon {
      filter: invert(1) brightness(2);
    }
  }
}

#root {
  max-width: 100%;
  margin: 0 auto;
  text-align: center;
  min-height: 100svh;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
}

h1 {
  font-family: "PT Serif", serif;
  font-size: 36px;
}

html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
}

main {
  flex: 1;
}

section {
  width: 100%;
  max-width: 800px;
  margin: 0 auto;
  padding: 25px;
  box-sizing: border-box;
  text-align: left;

  h2 {
    font-size: 28px;
    font-style: italic;
  }

  &:not(:last-of-type)::after {
    content: "";
    display: block;
    width: 10%;
    height: 6px;
    background: var(--accent);
    margin-top: 32px;
  }
}

